--- a/Group3/pom.xml
+++ b/Group3/pom.xml
@@ -67,6 +67,18 @@
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
 
+    <!-- JSON Processing -->
+<dependency>
+    <groupId>com.fasterxml.jackson.datatype</groupId>
+    <artifactId>jackson-datatype-jsr310</artifactId>
+</dependency>
+
+<!-- RestTemplate (đã có trong spring-boot-starter-web) -->
+<!-- Scheduling -->
+<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-validation</artifactId>
+</dependency>
 
     </dependencies>
 
