--- a/Group3/src/main/resources/application.properties
+++ b/Group3/src/main/resources/application.properties
@@ -5,10 +5,9 @@ spring.application.name=Movie
 # ===============================
 spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=MovieDB;encrypt=false
 spring.datasource.username=sa
-spring.datasource.password=123
+spring.datasource.password=161104
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 server.port=8082
-
 
 # ===============================
 # JPA / HIBERNATE SETTINGS
@@ -17,3 +16,21 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
+
+# ===============================
+# TMDB API KEY
+# ===============================
+# Đăng ký tại: https://www.themoviedb.org/settings/api
+tmdb.api.key=eac03c4e09a0f5099128e38cb0e67a8f
+
+# ===============================
+# SCHEDULING
+# ===============================
+spring.task.scheduling.pool.size=2
+
+# ===============================
+# THYMELEAF SETTINGS
+# ===============================
+spring.thymeleaf.cache=false
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
