--- a/Group3/src/main/resources/application.properties
+++ b/Group3/src/main/resources/application.properties
@@ -3,12 +3,11 @@ spring.application.name=Movie
 # ===============================
 # DATABASE CONNECTION (SQL SERVER)
 # ===============================
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=MovieDB;encrypt=false
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=MovieDB;encrypt=false;characterEncoding=UTF-8
 spring.datasource.username=sa
-spring.datasource.password=123
+spring.datasource.password=161104
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 server.port=8082
-
 
 # ===============================
 # JPA / HIBERNATE SETTINGS
@@ -17,3 +16,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
+
+# ===============================
+# UTF-8 ENCODING (Spring Boot 3)
+# ===============================
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.force=true
